--- a/src/stories/Components/TextField/TextField.module.scss
+++ b/src/stories/Components/TextField/TextField.module.scss
@@ -26,7 +26,7 @@
     transition: all 500ms ease-in-out;
     input {
       color: var(--White-white, #fff);
-
+    flex-grow: 1;
       /* Body-2/Semi-bold */
       font-family: Gilroy-SemiBold;
       font-size: 14px;
@@ -46,6 +46,15 @@
       font-style: normal;
       font-weight: 400;
       line-height: 100%; /* 14px */
+    }
+    .icon {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 24px;
+      height: 24px;
+      max-width: 24px;
+      max-height: 24px;
     }
   }
   .focused {
