--- a/src/stories/Components/PasswordField/PasswordField.module.scss
+++ b/src/stories/Components/PasswordField/PasswordField.module.scss
@@ -1,7 +1,8 @@
-.TextFieldWrapper {
+.passwordFieldCon {
   display: flex;
   flex-direction: column;
-  gap: 4px;
+  // gap: 4px;
+  position: relative;
   .lbl {
     color: var(--White-white, #fff);
     text-align: left;
@@ -26,7 +27,7 @@
     transition: all 500ms ease-in-out;
     input {
       color: var(--White-white, #fff);
-    flex-grow: 1;
+      flex-grow: 1;
       /* Body-2/Semi-bold */
       font-family: Gilroy-SemiBold;
       font-size: 14px;
@@ -77,5 +78,91 @@
     font-style: normal;
     font-weight: 400;
     line-height: 100%; /* 14px */
+  }
+  .passwordErrorBox {
+    display: none;
+    padding: 10px 24px;
+    max-width: 315px;
+    position: absolute;
+    right: -4px;
+    flex-direction: column;
+    gap: 10px;
+    border-radius: 16px;
+    border: 1px solid var(--new_input_stroke, rgba(111, 111, 111, 0.25));
+    background: var(
+      --background-content_bg-content_bg-5,
+      rgba(137, 137, 234, 0.05)
+    );
+    box-shadow: 0px 16px 35px -15px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(60px);
+    z-index: 10;
+    .title {
+      color: var(--White-white, #fff);
+      font-family: Roboto;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 150%;
+    }
+    .listofErrors {
+      .row {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        label {
+          color: var(--White-white, #fff);
+
+          /* Body 3 */
+          font-family: Roboto;
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 150%; /* 21px */
+        }
+      }
+    }
+  }
+  &.focused {
+    .passwordErrorBox {
+      display: inline-flex;
+      animation: fadeIn 300ms ease-in-out forwards;
+    }
+  }
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateX(100%) translateY(-30%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(100%) translateY(-25%);
+  }
+}
+
+@media (max-width: 1000px) {
+  .passwordFieldCon {
+    .passwordErrorBox {
+      display: inline-flex;
+      position: relative;
+      max-width: 100%;
+      border: none;
+      background: transparent;
+      box-shadow: none;
+      backdrop-filter: blur(0);
+      padding: 0;
+      margin-top: 16px;
+      border-radius: 0;
+      .listofErrors {
+        .row {
+          &.valid {
+            display: none;
+          }
+        }
+      }
+      &.passwordCorrect{
+        display: none;
+      }
+    }
   }
 }
