--- a/src/stories/Components/Icons/icons.module.scss
+++ b/src/stories/Components/Icons/icons.module.scss
@@ -1,3 +1,8 @@
+body {
+  font-family: 'Inter', sans-serif;
+  background-color: #E0FF9C;
+}
+
 .container {
   padding: 20px;
   // background-color: #171525;
@@ -110,12 +115,6 @@
   --card-bg-color: #444;
   --border-color: #555;
   --text-color: #fff;
-}
-
-body {
-  background-color: var(--bg-color);
-  color: var(--text-color);
-  font-family: "Roboto", sans-serif;
 }
 
 .card {
