--- a/src/stories/Components/Pagination/Pagination.module.scss
+++ b/src/stories/Components/Pagination/Pagination.module.scss
@@ -15,7 +15,7 @@
     justify-content: center;
     cursor: pointer;
     label {
-      font-family: Gilroy-SemiBold;
+      font-family: 'Inter', sans-serif;
       font-size: 14px;
       font-weight: 400;
       line-height: 14px;
@@ -41,7 +41,6 @@
       opacity: 0.25;
       border: 1px solid rgba(137, 137, 234, 0.03);
       background: rgba(137, 137, 234, 0.05);
-
     }
   }
 }
