--- a/src/stories/Components/Icons/icons.module.scss
+++ b/src/stories/Components/Icons/icons.module.scss
@@ -1,3 +1,8 @@
+body {
+  font-family: 'Inter', sans-serif;
+  background-color: #E0FF9C;
+}
+
 .container {
   padding: 20px;
   // background-color: #171525;
